<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_security_type_none">Open network</string>
    <string name="accessibility_wifi_security_type_secured">Secure network</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="action">Action</string>
    <string name="active_input_method_subtypes">Active input methods</string>
    <string name="adb_keys_warning_message">Revoke access to USB debugging from all computers you’ve previously authorized?</string>
    <string name="adb_warning_message">USB debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adb_warning_title">Allow USB debugging?</string>
    <string name="alarm_template">at %1$s</string>
    <string name="alarm_template_far">on %1$s</string>
    <string name="alarms_only">Alarms only</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="animator_duration_scale_title">Animator duration scale</string>
    <string name="apn_settings_not_available">Access Point Name settings are not available for this user</string>
    <string name="app_process_limit_title">Background process limit</string>
    <string name="available_via_carrier">Available via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_lower">charging</string>
    <string name="battery_info_status_discharging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_status_not_charging">"Plugged in, can't charge right now"</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_meter_very_low_overlay_symbol">!</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_active_battery_level">Active, %1$s battery</string>
    <string name="bluetooth_active_no_battery_level">Active</string>
    <string name="bluetooth_battery_level">%1$s battery</string>
    <string name="bluetooth_connected">Connected%1$s</string>
    <string name="bluetooth_connected_battery_level">Connected, battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)%1$s</string>
    <string name="bluetooth_connected_no_a2dp_battery_level">Connected (no media), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)%1$s</string>
    <string name="bluetooth_connected_no_headset_battery_level">Connected (no phone), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)%1$s</string>
    <string name="bluetooth_connected_no_headset_no_a2dp_battery_level">Connected (no phone or media), battery %1$s%2$s</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)%1$s</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_disable_absolute_volume">Disable absolute volume</string>
    <string name="bluetooth_disable_absolute_volume_summary">Disables the Bluetooth absolute volume feature in case of volume issues with remote devices such as unacceptably loud volume or lack of control.</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_hearing_aid_profile_summary_connected">Connected to Hearing Aid</string>
    <string name="bluetooth_hearing_aid_profile_summary_use_for">Use for Hearing Aid</string>
    <string name="bluetooth_hearingaid_left_battery_level">Left - %1$s battery</string>
    <string name="bluetooth_hearingaid_left_pairing_message">Pairing left hearing aid…</string>
    <string name="bluetooth_hearingaid_right_battery_level">Right - %1$s battery</string>
    <string name="bluetooth_hearingaid_right_pairing_message">Pairing right hearing aid…</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to input device</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for input</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to map</string>
    <string name="bluetooth_map_profile_summary_use_for">Use for map</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bottom_position">Bottom position</string>
    <string name="button_swap_summary">Swap the order of recents and back buttons</string>
    <string name="button_swap_title">Swap buttons</string>
    <string name="buttons_title">Buttons</string>
    <string name="dci_mode_summary" />
    <string name="dci_mode_title">Wide color gammut mode</string>
    <string name="enable_gestures_summary">Enable screen off gestures</string>
    <string name="enable_gestures_title">Enable gestures</string>
    <string name="gesture_c_title">Gesture C</string>
    <string name="gesture_double_tap_title">Gesture Double Tap</string>
    <string name="gesture_down_title">Gesture Swipe Down</string>
    <string name="gesture_e_title">Gesture e</string>
    <string name="gesture_left_title">Gesture Swipe Left</string>
    <string name="gesture_right_title">Gesture Swipe Right</string>
    <string name="gesture_s_title">Gesture S</string>
    <string name="gesture_up_title">Gesture Swipe Up</string>
    <string name="gesture_v_title">Gesture V</string>
    <string name="gesture_w_title">Gesture W</string>
    <string name="gesture_z_title">Gesture Z</string>
    <string name="gestures">Gestures</string>
    <string name="gestures_dashboard_summary">Awesome screen-off gestures</string>
    <string name="gestures_title">Gestures</string>
    <string name="graphics_title">Graphics</string>
    <string name="kcal">Display</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_color_temp">Color temperature (K)</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_title">Display color control</string>
    <string name="middle_position">Middle position</string>
    <string name="notification_slider">Notification slider</string>
    <string name="proxi_summary_head">Check proximity sensor for handling gesture and fingerprint sensor</string>
    <string name="proxi_title_head">Proximity check</string>
    <string name="screen_off_gestures">Screen-off gestures</string>
    <string name="srgb_mode_summary" />
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="top_position">Top position</string>
</resources>