<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/gestures">
        <PreferenceScreen android:title="@string/screen_off_gestures" android:key="zenmotions" android:summary="@string/gestures_dashboard_summary" android:fragment="com.asus.zenmotions.settings.ScreenOffGestureSettings" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ambient_display_title">
        <PreferenceScreen android:title="@string/ambient_display_gestures_title" android:key="ambient_display_gestures" android:summary="@string/ambient_display_gestures_summary" android:fragment="com.asus.zenmotions.TouchscreenGesturePreferenceActivity" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/kcal">
        <PreferenceScreen android:title="@string/kcal_title" android:key="kcal" android:summary="@string/kcal_summary" android:fragment="com.lineageos.settings.lepref.DisplayCalibration" />
    </PreferenceCategory>
</PreferenceScreen>